# WORLDS

./: .gitignore  01_WorldModel.md  03_CollectiveAgency.md  04_ResourcesAndMaterials.md  06_BiologyAndDomestication.md  10_TechnicalArchitecture.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Concept_MLAndNNUsage.md  Concept_SwarmToSociety.md  DesignSpec.md  DiscoveryHeuristics.md  LICENSE  Plan_BuildOrder.md  Plan_RepoStructure.md  README.md  SpecSuite.md  TRACKING.md  dxdiag_gpu.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
crates/polis-agents/: Cargo.toml
crates/polis-agents/src/: animals.rs  collective.rs  (+4 more)
crates/polis-app/: Cargo.toml
crates/polis-app/src/: main.rs
crates/polis-compute/: Cargo.toml
crates/polis-core/: Cargo.toml
crates/polis-export/: Cargo.toml
crates/polis-frontend/: Cargo.toml
crates/polis-frontend/src/: lib.rs
crates/polis-narrative/: Cargo.toml
crates/polis-sim/: Cargo.toml
crates/polis-systems/: Cargo.toml
crates/polis-world/: Cargo.toml
docs/: 02_StateModel.md  05_DiscoveryHeuristics.md  06_BiologyAndDomestication.md  07_SocietyAndInstitutions.md  08_ValidationAndExperiments.md  09_FrontendAndPresentation.md  APIContracts.md  Concept_FrontendDesign.md  DatabaseSchema.md  DemoPlaybook.md  EventSchema.md  POLIS_Specification.md  POLIS_Specification_Summary.md  Plan_BuildOrder.md  Plan_RepoStructure.md  PrevisAssets.md  ScenarioSchema.md  Spec_FrontendDataContract.md
docs/legacy/: DiscoveryHeuristics.md  Worldspec1.md
scenarios/: default.ron  demo_v1.ron
shaders/: README.md
tests/integration/: README.md
tests/validation/: README.md
(+10 files in other folders)
