[package]
name = "polis-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
polis-core = { path = "../polis-core" }
polis-sim = { path = "../polis-sim" }
polis-export = { path = "../polis-export" }
polis-frontend = { path = "../polis-frontend", optional = true }

[features]
windowed = ["dep:polis-frontend"]
